- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images


DONE:
7/23/08 - convert real glacier picture from PNG to JPG (653KB versus 57KB)
7/23/08 - remove alignment points from background image, turn off alignment nodes in sim
7/23/08 - delete penguin image files, remove license file entry
7/23/08 - move background image alignment points to GlaciersConstants, generalize marker node creation
7/23/08 - move debug flags from GlaciersPlayArea to GlaciersConstants
7/23/08 - make ripples slightly darker above ELA so that they're easier to see when snowfall is visible
7/23/08 - increase default clock speed to 4fps
******* 0.00.38 (23437)
7/23/08 - add yaw to fake 3D perspective for ice, debris, ELA, ripples (see YAW_ROTATION, YAW_X_OFFSET)
7/23/08 - rename PERSPECTIVE_HEIGHT to PITCH_Y_OFFSET
7/23/08 - move PERSPECTIVE_HEIGHT constant from Valley to GlaciersConstants
******* 0.00.37 (23428)
7/23/08 - turn off "snap tools to headwall", so that tools behave the same on both sides of the headwall
7/23/08 - add a flag to turn "snap tools to headwall" on and off
7/23/08 - brute force workaround for valley elevation at x<0, linear interpolation between manually-created sample points
******* 0.00.36 (23398)
7/22/08 - hide icons for "coordinates" and "ice flow" check boxes in Intro tab
7/22/08 - verify that all feature for July 25 milestone work properly when clock is paused
7/22/08 - update SnowfallNode only when its visible
7/22/08 - clip SnowfallNode to the atmosphere
7/22/08 - lower the elevation where white-out occurs at max snowfall